--- a/index.css
+++ b/index.css
@@ -1,12 +1,12 @@
 body{
-    margin: 500px;
+    
 }
 table,td,th{
     padding: 5px;
     border-collapse: collapse;
   }
   table{
-    width: 200px;
+    width: 1000px;
     height: 200px;
   }
   th{
@@ -17,19 +17,25 @@ table,td,th{
       display: flex;
       text-align: center;
       color: white;
+      margin-bottom: 30px;
+      margin-top: -20px;
   }
+
   #party{
       background-color: #F15A29;
   }
   #party1{
       color: black;
   }
+  tr:hover{
+      opacity: 0.5;
+  }
   #break{
       background-image: url(./images/breakfast.jpg);
   }
   #lunch{
       background-image: url(./images/lunch.jpg);
-      opacity: 0.5;
+      
   }
   #dinner{
    background-image: url(./images/dinner.jpg)
@@ -51,6 +57,12 @@ table,td,th{
 .menu2{
     text-align: center;
 }
+.menu2 p{
+    text-transform: capitalize;
+    font-size: 20px;
+    color: white;
+    padding: 30px;
+}
 .menu{
     height: 20%;
     width: 20%;
@@ -67,6 +79,11 @@ table,td,th{
 
 .to{
     display: flex;
+    width: 80%;
+    margin-left: 10%;   
+    margin-top: 20px;
+    margin-bottom: 30px;
+    box-shadow: 5px 5px 5px 5px grey;
 }
 
 .ro{
