--- a/index.css
+++ b/index.css
@@ -72,7 +72,7 @@ table,td,th{
 .jj{
     display: flex;
     padding: 3px;
-    margin-right: 50px;
+    margin-left: 80px;
 }
 .uu{
     border: transparent;
@@ -106,6 +106,14 @@ table,td,th{
     margin-right: 15%;
     margin-left: 15%;
     text-align: left;
+    
+}
+.tyu{
+    padding: 30px;
+    margin-right: 15%;
+    margin-left: 15%;
+    text-align: right;
+
 }
 
 
@@ -200,6 +208,7 @@ footer{
 /* chicken */
 .tabl{
     display: flex;
+    margin-right: 100px;
 
     /* text-align: right; */
 }
@@ -216,12 +225,7 @@ footer{
     height: unset;
     margin-left: 50px;
 }
-.tyu{
-    padding: 30px;
-    margin-right: 15%;
-    margin-left: 15%;
-    text-align: right;
-}
+
 .toma{
     text-align: center;
     background-image: url(./images/background3.jpg);
