adding background color to the one given

--- a/index.css
+++ b/index.css
@@ -240,7 +240,7 @@ footer{
 }
 .jk{
     display: flex;
-    justify-content: enter;
+    justify-content: center;
     justify-content: space-between 7em; 
 }
 .liv{
