adding the copyright logo

--- a/index.css
+++ b/index.css
@@ -255,7 +255,7 @@ footer{
 }
 .live{
     border: transparent;
-    background-color: red;
+    background-color: #F25C2A;
     width: 125px;
     border-radius: 8px;
 }
