--- a/index.css
+++ b/index.css
@@ -70,9 +70,11 @@ table,td,th{
     padding: 30px;
     padding-top: 56px;
 }
-.menu{
+#menu{
     height: 20%;
     width: 20%;
+    padding-top: 30px;
+    padding-left:30px ;
 }
 .container10{
     display: flex;
@@ -292,9 +294,3 @@ footer{
 .aroo{
     color: red;
 }
-span{
-    color: white;
-    float: left;
-    margin-left: 2%;
-    height: 233%;
-  }
