--- a/index.css
+++ b/index.css
@@ -115,7 +115,7 @@ table,td,th{
     text-align: left;
     
 }
-.tyu{
+.container_table{
     padding: 30px;
     margin-right: 15%;
     margin-left: 15%;
