--- a/index.css
+++ b/index.css
@@ -164,7 +164,7 @@ p{
     margin-top: 10px;
 }
 /* styling footer */
-footer{
+/* footer{
     text-align: center;
     background-color: #F15A29;
 }
@@ -173,7 +173,7 @@ footer{
     display: flex;
     flex-direction: column;
     justify-content: center;
-}
+} */
 /* chichenburger  */
 .back {
     background-image: url(./images/background2.jpg);
@@ -222,9 +222,9 @@ footer{
     /* text-align: right; */
 }
 .galar{
-    border: solid red;
+    border: solid  #F15A29;
     border-radius: 7px;
-    color: red;
+    color:  #F15A29;
     width: 150px;
     
 }
@@ -235,16 +235,8 @@ footer{
     margin-left: 50px;
 }
 
-.toma{
-    text-align: center;
-    background-image: url(./images/background3.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    color: white;
-    margin-top: 56px;
-    padding-bottom: 56px;
-    padding-top: 25px;
-}
+
+} 
 .jk{
 
     display: flex;
@@ -292,5 +284,43 @@ footer{
     margin-top: 10px;
 }
 .aroo{
-    color: red;
+    color:  #F15A29;
+}
+#subscribe {
+    background-image: url("./images/background3.jpg");
+    height: 350px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    text-align: center;
+    color: white;
+    font-size: 28px;
+    display: flexbox;
+    padding-top: 100px;
+    box-sizing: border-box;
+}
+input {
+    background-color:;
+    height: 50px;
+    margin-right: 15px;
+    border-radius: 7px;
+}
+.emailinput {
+    background-color:rgba(141, 135, 135,0.5);
+    width: 13%;
+}
+.submit {
+    background-color: #F15A29;
+    width: 9%;
+}
+#footer {
+    color: whitesmoke;
+    background-color: #F15A29;
+    padding: 20px;
+}
+#footer>div {
+    display: flex;
+    justify-content: center;
+}
+.imagelinks>img {
+    margin-right: 10px;
 }
