--- a/index.css
+++ b/index.css
@@ -292,7 +292,7 @@ p{
     background-repeat: no-repeat;
     background-size: cover;
     text-align: center;
-    color: whitesmoke;
+    color: whit;
     font-size: 28px;
     display: flexbox;
     padding-top: 100px;
